<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/venue_back"
    tools:context=".VenueActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v1"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v1l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v1c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v1m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v2"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v2l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v2c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v2m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v3"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v3l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v3c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v3m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v4"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v4l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v4c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v4m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v5"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v5l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v5c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v5m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v6"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v6l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v6c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v6m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v7"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v7l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v7c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v7m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v8"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v8l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v8c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v8m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v9"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v9l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v9c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v9m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v10"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v10l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v10c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v10m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/round_corner"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/v11"
                    android:textSize="20sp"
                    android:fontFamily="@font/oswaldmedium"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v11l"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v11c"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/v11m"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotoregular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>